--- a/SwiftlyOfSixty/nbproject/project.properties
+++ b/SwiftlyOfSixty/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SwiftlyOfSixty
-main.class=swiftlyofsixty.SwiftlyOfSixty
+main.class=swiftlyofsixty.GamePlay
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
