--- a/SwiftlyOfSixty/nbproject/private/private.properties
+++ b/SwiftlyOfSixty/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Administrater\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\TEMP.LAB1-PC09.002\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
